# deepphonemizer-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  config.yaml  readme.md
.devcontainer/: devcontainer.json
src/: lib.rs
src/dp/: mod.rs  phonemizer.rs  utils.rs
src/model/: mod.rs  model.rs  predictor.rs  torchscript.rs  utils.rs
src/nn/: dropout.rs  mod.rs
src/preprocessing/: mod.rs  text.rs  util.rs
