[package]
name = "deepphonemizer"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords = ["g2p", "linguistics", "phonemizer", "deepphonemizer"]
authors = ["Layetri <daniel@expressivelabs.net>", "Wouter Besse <wouter.besse@expressivelabs.net>"]
description = "A Rust implementation of the DeepPhonemizer G2P model (inference only)."
repository = "https://github.com/ExpressiveLabs/deepphonemizer-rs"

[dependencies]
tch = {version = "0.14.0", features = ["download-libtorch"]}
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"
itertools = "0.8"
serde-pickle = "1.1.1"
dotenv = "0.15.0"
