[package]
name = "deepphonemizer"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords = ["g2p", "linguistics", "phonemizer", "deepphonemizer"]
authors = ["Layetri <daniel@expressivelabs.net>", "Wouter Besse <wouter.besse@expressivelabs.net>"]
description = "A Rust implementation of the DeepPhonemizer G2P model (inference only)."
repository = "https://github.com/ExpressiveLabs/deepphonemizer-rs"

[dependencies]
tch = {version = "0.20.0", features = ["download-libtorch"]}
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
itertools = "0.14"
serde-pickle = "1.2.0"
dotenv = "0.15.0"
